# ARX-dp-Inference

./: .gitignore  LICENSE  README.md  eval_real_ros.py  eval_real_ros_scdp.py  policy_obs.py  start.sh  start_arx5.sh  start_camera.sh
codebase/diffusion_policy/diffusion_policy/policy/: diffusion_unet_image_policy.py
codebase/diffusion_policy/tests/: test_single_realsense.py
follow1/src/arm_control/: CMakeLists.txt
follow1/src/arm_control/cfg/: reconfig.cfg
follow1/src/arm_control/include/Hardware/: can.h  motor.h
follow1/src/arm_control/include/libcan/: SocketCAN.h
follow1/src/arm_control/launch/: arx5v.launch  camera.launch
follow1/src/arm_control/msg/: PosCmd.msg
follow1/src/arm_control/scripts/: image_display.py  left_image_publish.py  mid_image_publish.py  realsense_camera.py  right_image_publish.py  sample.py  sample_human.py  sample_initial.py
follow1/src/arm_control/src/: arx_5v.cpp
follow1/src/arm_control/src/App/: arm_control.cpp
follow1/src/arm_control/src/Hardware/: motor.cpp
follow2/src/arm_control/: CMakeLists.txt
follow2/src/arm_control/cfg/: reconfig.cfg
follow2/src/arm_control/include/App/: arm_control.h  play.h  solve.h
follow2/src/arm_control/include/Hardware/: can.h
follow2/src/arm_control/launch/: arx5v.launch
follow2/src/arm_control/msg/: JointInformation.msg
follow2/src/arm_control/src/: arx_5v.cpp
follow2/src/arm_control/src/App/: arm_control.cpp
master1/src/arm_control/: CMakeLists.txt
master1/src/arm_control/cfg/: reconfig.cfg
master1/src/arm_control/include/App/: arm_control.h
master1/src/arm_control/include/Hardware/: can.h
master1/src/arm_control/launch/: arx5v.launch
master1/src/arm_control/models/: ultron_v1.1_aa.urdf
master1/src/arm_control/src/: arx_5v.cpp
master1/src/arm_control/src/App/: arm_control.cpp
master1/src/arm_control/src/Eigen/src/OrderingMethods/: Amd.h
master2/src/arm_control/: CMakeLists.txt
master2/src/arm_control/cfg/: reconfig.cfg
master2/src/arm_control/include/App/: solve.h
master2/src/arm_control/include/Hardware/: can.h  motor.h
master2/src/arm_control/launch/: arx5v.launch
master2/src/arm_control/src/: arx_5v.cpp
master2/src/arm_control/src/App/: arm_control.cpp
master2/src/arm_control/src/Hardware/: motor.cpp
